<resources>
    <string name="kmh">km/h</string>
    <string name="mph">mph</string>
    <string name="km">km</string>
    <string name="whkm">Wh/km</string>
    <string name="whmi">Wh/mi</string>
    <string name="wh">Wh</string>
    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="miles">mi</string>
    <string name="garmin_connectiq_missing_app_message">The WheelLog App used with this application is not installed on your ConnectIQ device. Please install the widget and try again.</string>
    <string name="garmin_connectiq_service_unavailable_message">The ConnectIQ service is unavailable.</string>
    <string name="today">Today</string>
    <string name="unknown_device">Unknown device</string>
    <string name="ble_not_supported">Bluetooth LE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported on your device.</string>
    <string name="error_bluetooth_not_initialised">Unable to initialize Bluetooth, exiting</string>
    <string name="bluetooth_required">Bluetooth is required and was not successfully enabled.</string>
    <string name="bluetooth_direct_connect_failed">Direct connection failed. Searching for Wheel…</string>
    <string name="pip_failed">Entering picture-in-picture mode failed</string>
    <string name="back_to_exit">Press BACK again to exit</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="searching">Searching</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect_to_wheel">Connect to Wheel</string>
    <string name="disconnect_from_wheel">Disconnect from Wheel</string>
    <string name="waiting_for_device">Waiting for device</string>
    <string name="start_pebble_service">Start Pebble Dash</string>
    <string name="show_settings">Show settings menu</string>
    <string name="miband_desc">Change Mi Band mode</string>
    <string name="stop_pebble_service">Stop Pebble Dash</string>
    <string name="start_data_service">Start Logging</string>
    <string name="stop_data_service">Stop Logging</string>
    <string name="started_logging">Started logging to</string>
    <string name="started_raw_logging">Started RAW logging to</string>
    <string name="stopped_raw_logging">Stopped RAW logging to</string>
    <string name="paused_raw_logging">RAW logging paused (file open)</string>
    <string name="resumed_raw_logging">RAW logging resumed to</string>
    <string name="search_for_wheel">Search for Wheel</string>
    <string name="scanning">Scanning…</string>
    <string name="devices">Devices</string>
    <string name="mode_learn">Beginner</string>
    <string name="mode_play">Expert</string>
    <string name="mode_ride">Normal</string>
    <string name="waiting_for_wheel">Waiting for wheel…</string>
    <string name="no_smart_bms">Smart BMS is not detected</string>
    <string name="speed">Speed</string>
    <string name="average_speed">Avg Speed</string>
    <string name="average_riding_speed">Avg Riding</string>
    <string name="top_speed">Top Speed</string>
    <string name="battery">Battery</string>
    <string name="output">Duty cycle</string>
    <string name="cpuload">CPU load</string>
    <string name="charging_status">Charging</string>
    <string name="distance">Distance</string>
    <string name="wheel_distance">Wheel Distance</string>
    <string name="user_distance">User Distance</string>
    <string name="consumption">Consumption</string>
    <string name="ride_time">Journey Time</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="riding_time">Ride Time</string>
    <string name="voltage">Voltage</string>
    <string name="voltage_sag">Voltage Sag</string>
    <string name="current">Current</string>
    <string name="phase_current">Phase current</string>
    <string name="power">Power</string>
    <string name="temperature">System temp</string>
    <string name="temperature2">Motor temp</string>
    <string name="maxtemperature">Max temp</string>
    <string name="pwm">PWM</string>
    <string name="max_pwm">Max PWM</string>
    <string name="angle">Tilt</string>
    <string name="roll">Roll</string>
    <string name="fan_status">Fan Status</string>
    <string name="mode">Mode</string>
    <string name="total_distance">Total Distance</string>
    <string name="torque">Torque</string>
    <string name="dynamic_speed_limit">Speed Limit</string>
    <string name="dynamic_current_limit">Current Limit</string>
    <string name="cpu_temp">CPU temp</string>
    <string name="imu_temp">IMU temp</string>
    <string name="motor_power">Motor Power</string>
    <string name="total">Total</string>
    <string name="name">Name</string>
    <string name="model">Model</string>
    <string name="version">Version</string>
    <string name="error">Error code</string>
    <string name="serial_number">Serial Number</string>
    <string name="time_charge_title">Charge Time</string>
    <string name="notification_text">• %1$.1f km/h • %2$d%% • %3$d°C • %4$.1f km •</string>
    <string name="notification_text_ajdm_theme">%1$.1f km/h | %2$d%% | %3$d°C | %4$.1f km</string>
    <string name="icon_watch">Watch Icon</string>
    <string name="icon_logging">Logging Icon</string>
    <string name="icon_connection">Connection Icon</string>
    <string name="icon_beep">Horn Icon</string>
    <string name="connection_lost_at">Connection lost</string>
    <string name="enable_auto_upload_title">Enable Auto Upload?</string>
    <string name="enable_auto_upload_descriprion">Automatic uploading while not connected to WiFi will use your mobile data.  This may result in charges from your network provider if you do not have a data plan.</string>
    <string name="logging_error_no_storage_permission">No permission to write to external storage. Logging cancelled.</string>
    <string name="logging_error_storage_unavailable">External storage is unavailable. Logging cancelled.</string>
    <string name="logging_error_no_location_permission">Log location was requested but no permission to location data was provided. No location data will be logged.</string>
    <string name="logging_error_gps_disabled">Location logging using GPS was requested but GPS is disabled. Location will be logged using Network data.</string>
    <string name="logging_error_network_disabled">Location logging using GSM Network was requested but this location provider is disabled. No location data will be logged.</string>
    <string name="logging_error_all_location_providers_disabled">Location has been disabled within Android. No location data will be logged.</string>
    <string name="alarm_text_speed">Speed alarm triggered</string>
    <string name="alarm_text_current">Current alarm triggered</string>
    <string name="alarm_text_temperature">Temperature alarm triggered</string>
    <string name="alarm_text_pwm">PWM alarm triggered</string>
    <string name="alarm_text_battery">Battery alarm triggered</string>
    <string name="watch_garmin_group_title">Garmin</string>
    <string name="garmin_connectiq_enable_title">Garmin ConnectIQ</string>
    <string name="garmin_connectiq_enable_description">Enable connectivity to Garmin ConnectIQ</string>
    <string name="garmin_connectiq_use_beta_title">Beta Garmin companion</string>
    <string name="garmin_connectiq_use_beta_description">Use beta Garmin companion instead of a stable one</string>
    <string name="watch_pebble_group_title">Pebble</string>
    <string name="horn_mode_title">Horn Mode</string>
    <string name="horn_mode_description">Executed when the select button on the Pebble watch is pressed</string>
    <string name="tilt_back_description">Tiltback speed</string>
    <string name="max_speed_title">Wheel speed limit</string>
    <string name="alert1_title">1st Alert Speed</string>
    <string name="alert2_title">2nd Alert Speed</string>
    <string name="alert3_title">3rd Alert Speed</string>
    <string name="alarm3_description">4 beeps alarm</string>
    <string name="alarm2_description">3 beeps alarm</string>
    <string name="alarm1_description">2 beeps alarm</string>
    <string name="led_mode_nb_description">Choose led mode</string>
    <string name="led_type1">Flash</string>
    <string name="led_type2">Two colors alternating</string>
    <string name="led_type3">Full-color flash</string>
    <string name="led_type4">Dynamic breathing</string>
    <string name="led_type5">Flowing</string>
    <string name="led_type6">Full color wave</string>
    <string name="led_type7">Alter color breathing</string>
    <string name="pedals_mode_title">Pedals Mode</string>
    <string name="roll_angle_title">Roll angle cut off</string>
    <string name="led_mode_title">Leds mode</string>
    <string name="strobe_mode_title">Strobe Mode</string>
    <string name="light_mode_title">Light Mode</string>
    <string name="on_off">On/Off</string>
    <string name="on_off_auto">On/Off/Auto</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="charging">Charging</string>
    <string name="discharging">Discharging</string>
    <string name="auto">Auto</string>
    <string name="strobe">Strobe</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="soft">Soft</string>
    <string name="mode1">Mode 1</string>
    <string name="mode2">Mode 2</string>
    <string name="mode3">Mode 3</string>
    <string name="mode4">Mode 4</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="on_board_horn_ks">On-board (KingSong)</string>
    <string name="bluetooth_audio_horn">via bluetooth audio</string>
    <string name="speed_settings_title">Application Settings</string>
    <string name="logs_settings_title">Log Settings</string>
    <string name="alarm_settings_title">Alarm Settings</string>
    <string name="watch_settings_title">Watch/Band Preferences</string>
    <string name="wheel_settings_title">Wheel Settings</string>
    <string name="trip_settings_title">Trip Settings</string>
    <string name="reset_max_values_title">Reset maximum values</string>
    <string name="reset_max_values_description">Reset maximum values of speed, PWM, current, power</string>
    <string name="reset_lowest_battery_title">Reset battery sag</string>
    <string name="reset_user_distance_title">Reset user distance</string>
    <string name="edit_mac_addr_title">Edit MAC address</string>
    <string name="profile_name_title">Edit profile name</string>
    <string name="about_app_title">About WheelLog</string>
    <string name="settings_title">Settings</string>
    <string name="amp">A</string>
    <string name="newton">N*m</string>
    <string name="max_speed_dial_title">Top limit of outer dial</string>
    <string name="max_speed_dial_description">The maximum number shown on the outer dial (speed or current)</string>
    <string name="measurement_systems_category_title">Measurement systems</string>
    <string name="use_mph_title">Use MPH</string>
    <string name="use_mph_description">Show speed in miles rather than kilometers</string>
    <string name="use_fahrenheit_title">Use Fahrenheit</string>
    <string name="start_miband_alert">Start MiBand Alert</string>
</resources>