<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miSearch"
        android:icon="@drawable/ic_bt_new"
        android:title="@string/search_for_wheel"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/miWheel"
        android:icon="@drawable/ic_wheel_new"
        android:title="@string/connect_to_wheel"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/miLogging"
        android:icon="@drawable/ic_log_new"
        android:title="@string/start_data_service"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/miWatch"
        android:icon="@drawable/ic_watch_new"
        android:title="@string/start_pebble_service"
        android:visible="false"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/miBand"
        android:icon="@drawable/ic_mi_med"
        android:title="@string/start_miband_alert"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/miSettings"
        android:icon="@drawable/ic_sett3_new"
        android:title="@string/show_settings"
        app:showAsAction="always"></item>
</menu>
